# mirena_sim

./: .gitignore  CMakeLists.txt  README.md  icon.png.import  package.xml  project.godot
Assets/Models/Car/: TeR.res  car.glb.import
Assets/Models/Cone/: BigOrange.glb  BigOrange.glb.import  Cone_Blue.png.import  Cone_Orange.png.import  Cone_Yellow.png.import  bCone.glb.import  bCone_BlueCone.png.import  oCone.glb.import  oCone_OrangeCone.png.import  yCone_YellowCone.png.import
Assets/Models/Cone/Meshes/: BCone.res  BOCone.res  OCone.res  YCone.res
Assets/Models/Cone/textures/: BlueCone.png.import  OrangeCone.png.import  YellowCone.png.import
Assets/Textures/Asphalt/: asphalt_0002_ao_1k.jpg.import  asphalt_0002_color_1k.jpg.import  asphalt_0002_height_1k.png.import  asphalt_0002_normal_opengl_1k.png.import  asphalt_0002_roughness_1k.jpg.import
Assets/Textures/Sky/: kloofendal_48d_partly_cloudy_puresky_2k.exr.import
Assets/secret/super_secret/: green.webp.import  spark.png.import  spark2.png.import
Assets/secret/super_secret/source/: colors_miku.png.import  miku_lp.fbx.import
MirenaSim/: export_presets.cfg  project.godot
MirenaSim/Assets/Models/Cone/: BigCone.FCStd
MirenaSim/Assets/Models/Cone/Meshes/: BOCone.res
MirenaSim/Assets/Textures/Sky/: kloofendal_48d_partly_cloudy_puresky_2k.exr.import
MirenaSim/Assets/secret/super_secret/: green.webp.import
MirenaSim/Assets/secret/super_secret/source/: miku_lp.tscn
MirenaSim/LibMirena/: .gitignore
MirenaSim/Scenes/FreeCam/: freecam.gd
MirenaSim/Scenes/Sim/: SimEnv.tscn  sim.gd  track_manager.gd
MirenaSim/Scenes/Sim/UI/hud/: SimUI.tscn  mirena_hud.gd
MirenaSim/Scenes/Sim/UI/main_menu/: 39_button.gd  enable_car_wrapping_toggle.gd  main_menu.gd  main_menu.tscn  pilot_mode_list.gd
MirenaSim/Scenes/Sim/UI/track_menu/: track_ui.gd  track_ui.tscn
MirenaSim/Scenes/Track/: track.gd  track.gd.uid
MirenaSim/Scenes/Track/Cone/: cone.gd
MirenaSim/Scenes/Track/Gate/: gate.gd  gate.gd.uid
MirenaSim/Scenes/Vehicle/: car_debug.gd  car_debug.gd.uid  debug_broadcasters.gd  vehicleMotion.gd
MirenaSim/Scenes/Vehicle/ros_camera/: ros_camera.gd
MirenaSim/Scenes/Vehicle/ros_imu/: ros_imu.gd
MirenaSim/Scenes/Vehicle/ros_lidar/: lidar_compositor.gd  ros_lidar.gd
MirenaSim/Scenes/cones/: cone.gd
MirenaSim/Scenes/sim/: SimEnv.tscn
MirenaSim/Scenes/vehicle/: car_debug.gd  car_state_broadcaster.gd  perception_area.gd  perception_area.gd.uid  vehicleMotion.gd
MirenaSim/Scenes/vehicle/ros_imu/: ros_imu.gd  ros_imu.gd.uid
MirenaSim/Scenes/vehicle/ros_lidar/: LidarShader.glsl  LidarShader.glsl.import  lidar_compositor.gd
MirenaSim/Scenes/vehicle/vehicle_pilot/: manual_pilot.gd  ros_pilot.gd  track_rail_pilot.gd
MirenaSim/Scripts/classes/: camera_manager.gd  camera_manager.gd.uid  track_manager.gd
MirenaSim/Scripts/singletons/: ros.gd  ros.gd.uid  sim.gd
MirenaSim/Scripts/static/: preset_loader.gd
MirenaSim/UserInterface/hud/: controls_label.gd  mirena_hud.gd
MirenaSim/UserInterface/main_menu/: control_preset_button.gd  full_pipeline_preset.gd  full_pipeline_preset.gd.uid  main_menu.tscn  pub_enable_list.gd  pub_enable_list.gd.uid
MirenaSim/addons/: track.json
MirenaSim/addons/freecam_3D/: freecam.gd
Scenes/FreeCam/: freecam.gd
Scenes/Sim/: Sim.tscn  SimEnv.tscn  publish_task.gd  publish_task.gd.uid  sim.gd  sim_debug.gd  sim_debug.gd.uid  sim_env.gd  sim_env.gd.uid  track_menu.gd  track_menu.gd.uid
Scenes/Sim/UI/: SimUI.tscn  can_bus_dummy.gd  can_bus_dummy.gd.uid  controls_label.gd  debug_menu.gd  debug_menu.gd.uid  extra_menu.gd  extra_menu.gd.uid  sim_ui.gd  stats.gd  stats.gd.uid  vehicle_menu.gd  vehicle_menu.gd.uid
Scenes/Sim/UI/hud/: SimUI.tscn  controls_label.gd  mirena_hud.gd  track_loading_window.gd
Scenes/Sim/UI/main_menu/: 39_button.gd  main_menu.gd  main_menu.tscn  publisher_configurator.gd  publisher_configurator.gd.uid  publisher_configurator.tscn  ros_2_menu.gd  ros_2_menu.gd.uid
Scenes/Sim/UI/main_menu/track_menu/: track_ui.gd  track_ui.tscn
Scenes/Track/: Track.tscn  track.gd  track_generator.gd  track_generator.gd.uid
Scenes/Track/Cone/: cone.gd  cone.tscn
Scenes/Track/Gate/: gate.gd  gate.tscn
Scenes/Vehicle/: car_debug.gd  perception_area.gd  vehicleMotion.gd
Scenes/Vehicle/ros_camera/: ros_camera.gd
Scenes/Vehicle/ros_gps/: ros_gps.gd  ros_gps.gd.uid
Scenes/Vehicle/ros_imu/: ros_imu.gd
Scenes/Vehicle/ros_lidar/: LidarShader.glsl.import  lidar_compositor.gd  ros_lidar.gd
Scenes/Vehicle/vehicle_pilot/: manual_pilot.gd  ros_pilot.gd  track_rail_pilot.gd
TrackFiles/: acceleration.json  cone.json  skidpad.json
addons/rclgd/: ros_init.gd
export/arm64/: MirenaSim.sh
scripts/: editor_unbuilt_message.sh  install_godot.bash  launch_sim.sh
src/: register_types.cpp  register_types.h
src/ref_counted/: mirena_ros_bridge.cpp  mirena_ros_bridge.hpp  ros_time.cpp  ros_time.hpp
src/ros/: active_ros_node.cpp  active_ros_node.hpp  owned_ros_node.cpp  owned_ros_node.hpp  ros_conversions.cpp  ros_conversions.hpp
src/ros_bridge/: mirena_ros_bridge.hpp
src/sim/node3d/: mirena_cam.cpp  mirena_cam.hpp  mirena_car.cpp  mirena_car.hpp  mirena_gps.cpp  mirena_gps.hpp  mirena_imu.cpp  mirena_imu.hpp  mirena_lidar.cpp  mirena_lidar.hpp  ros_node3d.cpp
src/sim/ref_counted/: mirena_ros_bridge.cpp  mirena_ros_bridge.hpp  ros_time.cpp  ros_time.hpp  service_wrappers.cpp  service_wrappers.hpp
src/src/ros_bridge/: mirena_ros_bridge.hpp
src/tf2gd/: ros_node_3d.cpp  ros_node_3d.hpp
src/utility/: ros_conversions.hpp  toolbox.hpp
