<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mirena_sim</name>
  <version>0.1.0</version>
  <description>GODOT implementation of rclcpp</description>
  <maintainer email="miguelozubas@gmail.com">Ozuba</maintainer>
  <license>GPL-3.0-or-later</license>
  <buildtool_depend>rclgd</buildtool_depend>
  <export>
	<build_type>rclgd</build_type>
  </export>
</package>
